[gd_scene load_steps=20 format=3 uid="uid://b07ctb60h6qn3"]

[ext_resource type="Theme" uid="uid://c2jlnqd4fwdh" path="res://Scenes/menu.tres" id="1_jp1lc"]
[ext_resource type="Script" path="res://Code/HexMenu.gd" id="2_6msmd"]
[ext_resource type="TileSet" uid="uid://dieamonx6plg3" path="res://Scenes/Main tileset.tres" id="4_hb8p6"]
[ext_resource type="Texture2D" uid="uid://c2sf5g53asb8s" path="res://Assets/cool_monsta.png" id="4_pa87a"]
[ext_resource type="Texture2D" uid="uid://ddidp62fwcxo0" path="res://Assets/GUI/Menu border 3.png" id="4_qs4ye"]
[ext_resource type="Texture2D" uid="uid://ctj50db86xtfd" path="res://Assets/GUI/Structure Tile Map.png" id="7_63uiw"]
[ext_resource type="Texture2D" uid="uid://dic7fsluvmsqk" path="res://Assets/GUI/Buttons/Upgrade arrow v2/arrow_non_pressed.png" id="7_gqtel"]
[ext_resource type="Texture2D" uid="uid://bsr7djixsj6nr" path="res://Assets/GUI/Buttons/Upgrade arrow v2/arrow_pressed.png" id="8_kr2mp"]
[ext_resource type="Texture2D" uid="uid://b0q6bm4u2ntue" path="res://Assets/GUI/Buttons/Upgrade arrow v2/selected_arrow.png" id="9_fuyxh"]
[ext_resource type="Texture2D" uid="uid://cwbg866dlt85i" path="res://Assets/GUI/Buttons/upgrade arrow/Disabled.png" id="10_hp6n3"]
[ext_resource type="Texture2D" uid="uid://bs1420ipyfpm3" path="res://Assets/GUI/Buttons/downgrade arrow/arrow_down_non_selected_2.png" id="11_mq74o"]
[ext_resource type="PackedScene" uid="uid://clrpllmi8fj1f" path="res://Scenes/Upgrade menu.tscn" id="12_62yd3"]
[ext_resource type="Texture2D" uid="uid://48uj6vblaaks" path="res://Assets/GUI/Buttons/downgrade arrow/this_one_stupid.png" id="12_mh1bk"]
[ext_resource type="Texture2D" uid="uid://ckvryytiul8ps" path="res://Assets/GUI/Buttons/downgrade arrow/arrow_seleteced_down.png" id="13_sm74d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_myewi"]
bg_color = Color(0, 0, 0, 0.541176)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6hlcm"]
texture = ExtResource("4_qs4ye")
texture_margin_left = 23.8169
texture_margin_top = 130.512
texture_margin_right = 22.1989
texture_margin_bottom = 133.907
region_rect = Rect2(-0.671221, -1.32502, 283.204, 159.674)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lw3ks"]
texture = ExtResource("7_63uiw")
margins = Vector2i(30, 31)
separation = Vector2i(7, 9)
texture_region_size = Vector2i(268, 268)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
5:1/0 = 0
4:1/0 = 0
3:1/0 = 0
2:1/0 = 0
1:1/0 = 0
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_qx1hb"]
tile_size = Vector2i(356, 290)
sources/0 = SubResource("TileSetAtlasSource_lw3ks")

[sub_resource type="LabelSettings" id="LabelSettings_y3kew"]
line_spacing = -7.0
font_color = Color(0, 0, 0, 1)

[node name="Hex Menu" type="Control"]
z_index = 6
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
theme = ExtResource("1_jp1lc")
script = ExtResource("2_6msmd")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -34.0
offset_top = -37.0
offset_right = 9966.0
offset_bottom = 9963.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_myewi")

[node name="not_owned_panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 435.0
offset_top = 228.0
offset_right = 656.0
offset_bottom = 421.0

[node name="Hex_Label" type="Label" parent="not_owned_panel"]
layout_mode = 0
offset_left = 40.0
offset_top = -11.0
offset_right = 188.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(0.678431, 0.282353, 0, 1)
theme_override_colors/font_shadow_color = Color(0.74902, 0.282353, 0, 1)
text = "Thing Tile"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info" type="Label" parent="not_owned_panel"]
layout_mode = 0
offset_left = 21.0
offset_top = 37.0
offset_right = 203.0
offset_bottom = 174.0
text = "You Do Not Own
This Hex, Get A
Hex Adjacent to 
It to Access it."
horizontal_alignment = 1

[node name="CoolMonsta" type="Sprite2D" parent="not_owned_panel"]
position = Vector2(651, 0)
rotation = 1.13446
scale = Vector2(0.36, 0.36)
texture = ExtResource("4_pa87a")

[node name="Buildable" type="Control" parent="."]
anchors_preset = 0
mouse_filter = 2

[node name="Structure_List" type="Panel" parent="Buildable"]
layout_mode = 0
offset_left = 30.0
offset_top = 103.0
offset_right = 298.0
offset_bottom = 599.0
mouse_filter = 1
theme = ExtResource("1_jp1lc")
theme_override_styles/panel = SubResource("StyleBoxTexture_6hlcm")

[node name="Structure_List" type="TileMap" parent="Buildable/Structure_List"]
visible = false
position = Vector2(34, 57)
scale = Vector2(0.275, 0.275)
tile_set = SubResource("TileSet_qx1hb")
rendering_quadrant_size = 45
format = 2
layer_0/tile_data = PackedInt32Array(65536, 327680, 0, 131072, 327680, 0, 196608, 327680, 0, 262144, 327680, 0, 0, 327680, 0)

[node name="Title" type="Label" parent="Buildable/Structure_List"]
layout_mode = 0
offset_left = 49.0
offset_top = 22.0
offset_right = 229.0
offset_bottom = 54.0
theme = ExtResource("1_jp1lc")
text = "Build Structures"

[node name="Seperator" type="VBoxContainer" parent="Buildable/Structure_List"]
layout_mode = 0
offset_left = 27.0
offset_top = 63.0
offset_right = 247.0
offset_bottom = 264.0

[node name="Owned" type="Panel" parent="Buildable"]
layout_mode = 0
offset_left = 36.0
offset_top = 102.0
offset_right = 304.0
offset_bottom = 601.0
theme_override_styles/panel = SubResource("StyleBoxTexture_6hlcm")

[node name="Hex_Label" type="Label" parent="Buildable/Owned"]
layout_mode = 0
offset_left = 20.0
offset_top = 22.0
offset_right = 248.0
offset_bottom = 54.0
theme = ExtResource("1_jp1lc")
theme_override_colors/font_color = Color(0.12549, 0.227451, 0.121569, 1)
theme_override_colors/font_shadow_color = Color(0.756863, 0.0980392, 0.521569, 1)
theme_override_font_sizes/font_size = 26
text = "Thing Tile"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hex_Display" type="TileMap" parent="Buildable/Owned"]
position = Vector2(84, 75)
scale = Vector2(0.201519, 0.2)
tile_set = ExtResource("4_hb8p6")
format = 2
layer_0/name = "Main"
layer_1/name = "Highlight"
layer_1/tile_data = PackedInt32Array(0, 0, 0)

[node name="Upgrade" type="TextureButton" parent="Buildable/Owned"]
layout_mode = 0
offset_left = 200.0
offset_top = 106.0
offset_right = 424.0
offset_bottom = 410.0
scale = Vector2(0.18, 0.18)
texture_normal = ExtResource("7_gqtel")
texture_pressed = ExtResource("8_kr2mp")
texture_hover = ExtResource("9_fuyxh")
texture_disabled = ExtResource("10_hp6n3")

[node name="Downgrade" type="TextureButton" parent="Buildable/Owned"]
layout_mode = 0
offset_left = 29.0
offset_top = 106.0
offset_right = 253.0
offset_bottom = 410.0
scale = Vector2(0.18, 0.18)
texture_normal = ExtResource("11_mq74o")
texture_pressed = ExtResource("12_mh1bk")
texture_hover = ExtResource("13_sm74d")

[node name="Structure_List" type="TileMap" parent="Buildable/Owned"]
position = Vector2(16, 204)
scale = Vector2(0.275, 0.275)
tile_set = SubResource("TileSet_qx1hb")
rendering_quadrant_size = 45
format = 2
layer_0/tile_data = PackedInt32Array(0, 327680, 0)

[node name="Description" type="Label" parent="Buildable/Owned"]
layout_mode = 0
offset_left = 111.0
offset_top = 199.0
offset_right = 247.0
offset_bottom = 286.0
text = "Some text that explains what the thing does"
label_settings = SubResource("LabelSettings_y3kew")
vertical_alignment = 1
autowrap_mode = 2

[node name="Upkeep" type="Label" parent="Buildable/Owned"]
layout_mode = 0
offset_left = 28.0
offset_top = 278.0
offset_right = 106.0
offset_bottom = 310.0
text = "Upkeep"

[node name="Output" type="Label" parent="Buildable/Owned"]
layout_mode = 0
offset_left = 29.0
offset_top = 357.0
offset_right = 101.0
offset_bottom = 389.0
text = "Output"

[node name="Upgrade_Menu" parent="Buildable" instance=ExtResource("12_62yd3")]
layout_mode = 0
offset_left = 320.0
offset_top = 105.0
offset_right = 589.0
offset_bottom = 602.0

[connection signal="button_down" from="Buildable/Owned/Upgrade" to="." method="_on_upgrade_button_down"]
[connection signal="button_down" from="Buildable/Owned/Downgrade" to="." method="_on_downgrade_button_down"]
